--- a/README.org
+++ b/README.org
@@ -3,8 +3,9 @@
 [[file:images/loopy.png]]
 
 
-*NOTE:* This package is still in beta.  Breaking changes may occur
-without warning until the release of version *1.0.0*.
+* WARNING!
+This package is still in beta.  Breaking changes may occur without
+warning until the release of version *1.0.0*.
 
 * About
   This package implements interactive completion for the loop facility
